--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,12 @@
 
     <dependencies>
         <dependency>
+            <!--Tests-->
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
         </dependency>
+        <!--Logging-->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
